style(Hero) Fix title hover effect on small screens

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -300,7 +300,7 @@ img {
 
   h1:hover {
     color: #fff;
-    box-shadow: inset 0 -70px 0 var(--primary-color);
+    box-shadow: inset 0 -140px 0 var(--primary-color);
   }
 
   p {
@@ -320,9 +320,14 @@ img {
     letter-spacing: 1px;
   }
 
-  @media (min-width: 321px) {
+  @media (min-width: 415px) {
     h1 {
       font-size: 3rem;
+    }
+
+    h1:hover {
+      color: #fff;
+      box-shadow: inset 0 -70px 0 var(--primary-color);
     }
 
     p {
